# verifypn

./: abababab.pnml  colReduced.pnml  deadlock-query.xml  deadlock.pnml  elevator-queries.xml  elevator.pnml  massif.out.38645  massif.out.40430  passedList2.txt  reduction.pnml  results.csv  rgorakgrg.pnml  run-6f99608.sh  run.sh  setup_bench.sh  stressnet.pnml  stressquery.xml  test-rdfs.pnml  test.pnml  test.txt  test2.txt  testOut.pnml  testnet-queries.xml  testnet.pnml  testnet2-queries.xml  testnet2.pnml  text2.txt
include/LTL/: LTLSearch.h
include/LTL/Algorithm/: ModelChecker.h  NestedDepthFirstSearch.h  TarjanModelChecker.h
include/PetriEngine/: options.h
include/PetriEngine/ExplicitColored/: Binding.h  CPNMultiSet.h  CPNProductState.h  ColoredEncoder.h  ColoredMarkingSet.h  ColoredPetriNetBuilder.h  ColoredPetriNetMarking.h  ColoredPetriNetState.h  ColoredResultPrinter.h  ColoredSuccessorGenerator.h  ExplicitColoredModelChecker.h  ExplicitColoredPetriNetBuilder.h  ExplicitErrors.h  FireabilityChecker.h  PassedList.h  ProductColorEncoder.h  (+2 more)
src/: main.cpp
src/LTL/: LTLSearch.cpp
src/PetriEngine/: options.cpp
src/PetriEngine/ExplicitColored/: ArcCompiler.cpp  CMakeLists.txt  CPNMultiSet.cpp  ColoredPetriNetBuilder.cpp  ColoredResultPrinter.cpp  ColoredSuccessorGenerator.cpp  ExplicitColoredModelChecker.cpp  ExplicitColoredPetriNetBuilder.cpp
src/PetriEngine/ExplicitColored/Algorithms/: ExplicitWorklist.cpp  LTLNdfs.cpp  NaiveWorklist.cpp
src/PetriEngine/ExplicitColored/SuccessorGenerator/: ColoredSuccessorGenerator.cpp  ProductStateGenerator.cpp
(+12 files in other folders)
